src/tests/testfiles/function-declarations/12.txt
Error at 6:1: Redefinition of main
int main(void) {
^
